--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-6a4916de5191a1a4e84f4ee1710354623b8f6691",
+  "version": "0.0.0-28d1d815e56275482b92ec45d7d38626403c8e18",
   "bin": {
     "ng-dev": "./ng-dev/bundles/cli.js"
   },
@@ -70,6 +70,7 @@
     "@angular/platform-browser": "14.0.0-next.9",
     "@bazel/bazelisk": "^1.11.0",
     "@bazel/jasmine": "5.3.0",
+    "@google-cloud/firestore": "^5.0.2",
     "@google-cloud/storage": "^5.18.1",
     "@octokit/auth-app": "^3.6.0",
     "@octokit/core": "^3.5.1",
@@ -80,6 +81,7 @@
     "@octokit/request-error": "^2.1.0",
     "@octokit/rest": "^18.7.0",
     "@octokit/types": "^6.16.6",
+    "@octokit/webhooks-types": "^5.5.1",
     "@types/babel__core": "^7.1.19",
     "@types/cli-progress": "^3.9.1",
     "@types/conventional-commits-parser": "^3.0.1",
@@ -98,6 +100,10 @@
     "cli-progress": "^3.7.0",
     "conventional-commits-parser": "^3.2.1",
     "ejs": "^3.1.6",
+    "firebase": "^9.6.9",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.19.0",
+    "firebase-tools": "^10.5.0",
     "git-raw-commits": "^2.0.10",
     "glob": "7.2.0",
     "husky": "^7.0.1",
