--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-8ffcd1aabfcbcf0b05e9620dc86abd2a833a0f9c",
+  "version": "0.0.0-f4fb8c16f09f74e9b2a8b197b93fd9a3d9c793f9",
   "bin": {
     "ng-dev": "./ng-dev/bundles/cli.js"
   },
@@ -23,7 +23,7 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
-    "@angular-devkit/build-angular": "14.0.0-next.6",
+    "@angular-devkit/build-angular": "14.0.0-next.8",
     "@angular/benchpress": "0.3.0",
     "@babel/core": "^7.16.0",
     "@bazel/buildifier": "5.0.1",
@@ -60,20 +60,20 @@
   "devDependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
-    "@angular/animations": "14.0.0-next.9",
-    "@angular/bazel": "14.0.0-next.9",
-    "@angular/cdk": "14.0.0-next.7",
-    "@angular/cli": "14.0.0-next.6",
-    "@angular/common": "14.0.0-next.9",
-    "@angular/compiler": "14.0.0-next.9",
-    "@angular/compiler-cli": "14.0.0-next.9",
-    "@angular/core": "14.0.0-next.9",
-    "@angular/fire": "^7.3.0",
-    "@angular/forms": "14.0.0-next.9",
-    "@angular/material": "14.0.0-next.7",
-    "@angular/platform-browser": "14.0.0-next.9",
-    "@angular/platform-browser-dynamic": "14.0.0-next.9",
-    "@angular/router": "14.0.0-next.7",
+    "@angular/animations": "14.0.0-next.11",
+    "@angular/bazel": "14.0.0-next.11",
+    "@angular/cdk": "14.0.0-next.9",
+    "@angular/cli": "14.0.0-next.8",
+    "@angular/common": "14.0.0-next.11",
+    "@angular/compiler": "14.0.0-next.11",
+    "@angular/compiler-cli": "14.0.0-next.11",
+    "@angular/core": "14.0.0-next.11",
+    "@angular/fire": "^7.1.0-rc",
+    "@angular/forms": "14.0.0-next.11",
+    "@angular/material": "14.0.0-next.9",
+    "@angular/platform-browser": "14.0.0-next.11",
+    "@angular/platform-browser-dynamic": "14.0.0-next.11",
+    "@angular/router": "14.0.0-next.11",
     "@bazel/bazelisk": "^1.11.0",
     "@bazel/jasmine": "5.4.0",
     "@google-cloud/firestore": "^5.0.2",
@@ -144,6 +144,6 @@
     "zone.js": "^0.11.4"
   },
   "resolutions": {
-    "@angular/benchpress/@angular/core": "14.0.0-next.9"
+    "@angular/benchpress/@angular/core": "14.0.0-next.11"
   }
 }
