--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-01394f72bedb6991dac69c2565f03cc6254e3eec",
+  "version": "0.0.0-0469835fb01368a5d98b8cd70acdf48cca488f1f",
   "bin": {
     "ng-dev": "./ng-dev/bundles/cli.js"
   },
@@ -111,6 +111,7 @@
     "firebase-functions": "^3.19.0",
     "firebase-tools": "^10.5.0",
     "font-color-contrast": "^11.1.0",
+    "gcip-cloud-functions": "0.0.1",
     "git-raw-commits": "^2.0.10",
     "glob": "7.2.0",
     "husky": "^7.0.1",
