--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-46baa819360e4b0fe2aea442a1c10e2a9338bcc2",
+  "version": "0.0.0-f809d410b31526df09b487b182fbb2e9bae28c8c",
   "bin": {
     "ng-dev": "./ng-dev/bundles/cli.js"
   },
@@ -21,19 +21,19 @@
       "default": "./*"
     }
   },
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.2.1",
   "dependencies": {
-    "@angular-devkit/build-angular": "14.0.0-next.6",
+    "@angular-devkit/build-angular": "14.0.0-rc.3",
     "@angular/benchpress": "0.3.0",
     "@babel/core": "^7.16.0",
-    "@bazel/buildifier": "5.0.1",
-    "@bazel/concatjs": "5.3.0",
-    "@bazel/esbuild": "5.3.0",
-    "@bazel/protractor": "5.3.0",
-    "@bazel/runfiles": "5.3.0",
-    "@bazel/terser": "5.3.0",
-    "@bazel/typescript": "5.3.0",
-    "@microsoft/api-extractor": "7.19.5",
+    "@bazel/buildifier": "5.1.0",
+    "@bazel/concatjs": "5.5.0",
+    "@bazel/esbuild": "5.5.0",
+    "@bazel/protractor": "5.5.0",
+    "@bazel/runfiles": "5.5.0",
+    "@bazel/terser": "5.5.0",
+    "@bazel/typescript": "5.5.0",
+    "@microsoft/api-extractor": "7.24.2",
     "@types/browser-sync": "^2.26.3",
     "@types/node": "16.10.9",
     "@types/node-fetch": "^2.5.10",
@@ -44,33 +44,40 @@
     "@types/yargs": "^17.0.0",
     "browser-sync": "^2.27.7",
     "chalk": "^4.1.0",
-    "clang-format": "1.6.0",
+    "clang-format": "1.8.0",
     "node-fetch": "^2.6.1",
-    "prettier": "2.6.1",
+    "prettier": "2.6.2",
     "protractor": "^7.0.0",
-    "selenium-webdriver": "4.1.1",
+    "selenium-webdriver": "4.2.0",
     "send": "^0.18.0",
     "tmp": "^0.2.1",
     "true-case-path": "^2.2.1",
     "tslib": "^2.3.0",
-    "typescript": "~4.6.2",
+    "typescript": "~4.7.0",
     "uuid": "^8.3.2",
-    "yargs": "^17.0.0",
-    "zone.js": "^0.11.4"
+    "yargs": "^17.0.0"
   },
   "devDependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
-    "@angular/animations": "14.0.0-next.9",
-    "@angular/bazel": "14.0.0-next.9",
-    "@angular/common": "14.0.0-next.9",
-    "@angular/compiler": "14.0.0-next.9",
-    "@angular/compiler-cli": "14.0.0-next.9",
-    "@angular/core": "14.0.0-next.9",
-    "@angular/platform-browser": "14.0.0-next.9",
+    "@angular/animations": "14.0.0-rc.3",
+    "@angular/bazel": "14.0.0-rc.3",
+    "@angular/cdk": "14.0.0-rc.2",
+    "@angular/cli": "14.0.0-rc.3",
+    "@angular/common": "14.0.0-rc.3",
+    "@angular/compiler": "14.0.0-rc.3",
+    "@angular/compiler-cli": "14.0.0-rc.3",
+    "@angular/core": "14.0.0-rc.3",
+    "@angular/fire": "^7.1.0-rc",
+    "@angular/forms": "14.0.0-rc.3",
+    "@angular/material": "14.0.0-rc.2",
+    "@angular/platform-browser": "14.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "14.0.0-rc.3",
+    "@angular/router": "14.0.0-rc.3",
     "@bazel/bazelisk": "^1.11.0",
-    "@bazel/jasmine": "5.3.0",
-    "@google-cloud/storage": "^5.18.1",
+    "@bazel/jasmine": "5.5.0",
+    "@google-cloud/firestore": "^5.0.2",
+    "@google-cloud/storage": "^6.0.0",
     "@octokit/auth-app": "^3.6.0",
     "@octokit/core": "^3.5.1",
     "@octokit/graphql": "^4.8.0",
@@ -80,6 +87,7 @@
     "@octokit/request-error": "^2.1.0",
     "@octokit/rest": "^18.7.0",
     "@octokit/types": "^6.16.6",
+    "@octokit/webhooks-types": "^5.5.1",
     "@types/babel__core": "^7.1.19",
     "@types/cli-progress": "^3.9.1",
     "@types/conventional-commits-parser": "^3.0.1",
@@ -87,7 +95,7 @@
     "@types/events": "^3.0.0",
     "@types/git-raw-commits": "^2.0.0",
     "@types/glob": "^7.1.3",
-    "@types/inquirer": "8.2.0",
+    "@types/inquirer": "8.2.1",
     "@types/jasmine": "^4.0.0",
     "@types/jsdom": "^16.2.13",
     "@types/semver": "^7.3.6",
@@ -98,24 +106,36 @@
     "cli-progress": "^3.7.0",
     "conventional-commits-parser": "^3.2.1",
     "ejs": "^3.1.6",
+    "escodegen": "^1.13.0",
+    "espree": "^7.0.0",
+    "estraverse": "^5.1.0",
+    "firebase": "^9.6.9",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.19.0",
+    "firebase-tools": "^11.0.0",
+    "font-color-contrast": "^11.1.0",
+    "gcip-cloud-functions": "0.0.3",
     "git-raw-commits": "^2.0.10",
     "glob": "7.2.0",
-    "husky": "^7.0.1",
+    "husky": "^8.0.0",
     "inquirer": "^8.0.0",
-    "jasmine": "~4.0.0",
+    "jasmine": "~4.1.0",
+    "jasmine-core": "~4.1.0",
     "jsdoc": "^3.6.7",
     "jsdom": "^19.0.0",
     "karma": "^6.3.15",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "~2.2.0",
     "karma-firefox-launcher": "^2.1.2",
-    "karma-jasmine": "^4.0.1",
+    "karma-jasmine": "^5.0.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "karma-requirejs": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.8",
     "minimatch": "^5.0.0",
     "minimist": "^1.2.5",
     "multimatch": "^5.0.0",
     "nock": "^13.0.3",
-    "protobufjs": "^6.11.2",
+    "protobufjs": "^6.11.3",
     "requirejs": "^2.3.6",
     "rxjs": "^7.4.0",
     "semver": "^7.3.5",
@@ -125,9 +145,10 @@
     "uglify-js": "^3.14.2",
     "wait-on": "^6.0.0",
     "which": "^2.0.2",
-    "yaml": "^1.10.0"
+    "yaml": "^2.0.0",
+    "zone.js": "^0.11.4"
   },
   "resolutions": {
-    "@angular/benchpress/@angular/core": "14.0.0-next.9"
+    "@angular/benchpress/@angular/core": "14.0.0-rc.3"
   }
 }
